fixes cropped image in taking/expect

--- a/scss/sections/_taking.scss
+++ b/scss/sections/_taking.scss
@@ -88,6 +88,11 @@
     p {
         line-height: 2.5rem;
     }
+    .image-wrapper {
+        img {
+            object-position: 0px -50px;
+        }
+    }
 }
 #preparing {
     h2,h3 {
